--- a/mini-project/create.html
+++ b/mini-project/create.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" id="input"></input><br>
-    <button id="btn">Search</button>
-    <a href="./create.html">Add user</a>
-    <p id="result">Ket qua</p>
+    <form name="myForm" onsubmit="handleSubmit(event)">
+      Name: <input type="text" id="name" /> Email: <input type="text" id="input" />
+      <input type="submit" value="Submit" />
+    </form>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./index.js"></script>
   </body>
